linkTo helper text argument is unnecessary, just provide an inline block.

--- a/views/handlebars.jade
+++ b/views/handlebars.jade
@@ -21,7 +21,7 @@ mixin view(args)
 	else
 		| {{view !{args}}}
 
-mixin linkTo(args, text)
+mixin linkTo(args)
 	| {{#linkTo !{args}}}
 	if block
 		block
