--- a/views/handlebars.jade
+++ b/views/handlebars.jade
@@ -21,12 +21,10 @@ mixin view(args)
 	else
 		| {{view !{args}}}
 
-mixin linkTo(args, text)
+mixin linkTo(args)
 	| {{#linkTo !{args}}}
 	if block
 		block
-	else
-		!= text
 	| {{/linkTo}}
 
 
