Multiple swappable stylesheets now supported.

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -12,3 +12,14 @@ linkColor = #08c
 baseFontSize = 14px
 baseLineHeight = 20px
 baseBorderRadius = 4px
+
+
+
+// Utilities.
+
+.bold
+	font-weight bold
+
+.center
+	margin-left auto
+	margin-right auto
