--- a/styles/index.styl
+++ b/styles/index.styl
@@ -6,7 +6,7 @@
 
 // Bootstrap variables.
 
-textColor = #333	// This itself derived from @grayDark
+textColor = #333	// This is itself derived from @grayDark
 linkColor = #08c
 
 baseFontSize = 14px
