Equality handlebars helper, doesn't work quite right.

--- a/views/handlebars.jade
+++ b/views/handlebars.jade
@@ -35,3 +35,12 @@ mixin linkTo(args)
 
 mixin else
 	| {{else}}
+
+
+
+//- Custom helpers.
+
+mixin is(args)
+	| {{#is !{args}}}
+	block
+	| {{/is}}
